--- a/index.html
+++ b/index.html
@@ -97,18 +97,15 @@
 
 
 	<!--bandaid-->
-	<div class="container">
-		<div class="hpacccb tc" style="padding-top: 0;">
-			Get our band-aid from a partnered location and post an image of you wearing it. Show the world you got your antibodies!
-
-		</div>
-	</div>
-	<div class="container p50ho">
+		<div class="container">
 		<div class="hpacccb tc boxing c50 m10">
-			<div class="boxtitledg">Flu Shot Central Bandaid</div> <br><img src="assets/img/ffcbandaid2.png" alt="" style="padding: 10px 10px 5px 5px">
+			<div class="boxtitledg">Flu Shot Central Bandaid</div>
+			<div class="hpaccc tc m10" style="padding-top: 0;">
+			Get our band-aid from a partnered location and post an image of you wearing it. Show the world you got your antibodies!</div><img src="assets/img/ffcbandaid2.png" alt="" style="padding: 10px 10px 5px 5px">
 		</div>
 		<div class="hpacccb tc boxingy c50 m10">
 			<div class="boxtitledg" style="background: #dfe675; color: #008377">I Got My Antibodies</div>
+			<div class="hpaccc tc m10" style="padding-top: 0;">flushotcentral I got my flu shot. It’s to get yours. Show your medal here and tell us you got your shot by using the hashtag #FluShotCentral </div>
 			<img src="assets/img/fulligmuckup.jpg">
 		</div>
 	</div>
