--- a/facts.html
+++ b/facts.html
@@ -59,7 +59,7 @@ p{
 				<h1>Facts</h1>
 			
 				<h2 class="hpacccb">How Many People Got Sick with Flu Last Year?</h2>
-				<p  class="hpaccc">CDC estimates that in the united states the burden of illness during the 2018–2019 season included an estimated 35.5 million people getting sick with influenza, 16.5 million people going to a health care provider for their illness, 490,600 hospitalizations, and 34,200 deaths from influenza. The number of influenza-associated illnesses that occurred last season was similar to the estimated number of influenza-associated illnesses during the 2012–2013 influenza season when an estimated 34 million people had symptomatic influenza illness.</p>
+				<p  class="hpaccc">The CDC estimates that in the united states the burden of illness during the 2018–2019 season included an estimated 35.5 million people getting sick with influenza, 16.5 million people going to a health care provider for their illness, 490,600 hospitalizations, and 34,200 deaths from influenza. The number of influenza-associated illnesses that occurred last season was similar to the estimated number of influenza-associated illnesses during the 2012–2013 influenza season when an estimated 34 million people had symptomatic influenza illness.</p>
 			</div>
 		</div>
 </div>
